# wasm-bench

./: .gitignore  Cargo.toml  LICENSE.md  README.md  asconfig.json  index.html  package-lock.json  package.json
src/: bench.js
src/assemblyscript/: asconfig.json  process.ts
src/javascript/: process.js  process.min.js
src/rust/: process.rs
src/zig/: process.zig
