[package]
name = "wasm-bench"
version = "0.1.0"
authors = ["mattdesl"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/rust/process.rs"

[profile.release]
#opt-level = "s"
lto = true

[dependencies]
wasm-bindgen = "0.2.87"
wee_alloc = "0.4.5"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false